--- a/mediathread/templates/courseaffils/course_detail.html
+++ b/mediathread/templates/courseaffils/course_detail.html
@@ -21,5 +21,5 @@
 {% block content %}
     {{ block.super }}
 
-    <div id="react-container"></div>
+    <div class="course-collection" id="react-container"></div>
 {% endblock %}
