--- a/media/templates/discussion.mustache
+++ b/media/templates/discussion.mustache
@@ -1,137 +1,112 @@
-    <td class="panhandle-left-container">
-        <div class="panhandle-left discussion"></div>
-    </td>
-
-    <td class="panhandle-stripe discussion">
-        <div class="label">{{panel_state_label}}</div>
-    </td>
-
-    <td id="{{context.discussion.id}}-panel-container" class="panel-container {{panel_state}} discussion">
-        <div class="mediathread-panel discussion">
-            <table class="panel-subcontainer">
-                {{#title}}
-                <tr class="discussion-toolbar-row">
-                    <td colspan="4" class="panel-subcontainer-toolbar-column">
-                        <div class="panel-subcontainer-title discussion">
-                            <h1 class="discussion-title">
-                                {{title}}
-                            </h1>
-                        </div>
-                    </td>
-                </tr>
-                {{/title}}
-                <tr class="discussion-content-row">
-                    <td class="panel-content discussion fixed">
-                        <div class="threadedcomments-container">
-                            {{#context.discussion.thread.length}}
-                                {{#context.discussion.thread}}
-                                    {{^open}}
-                                        {{^close}}
-                                            </li>
-                                        {{/close}}
-                                    {{/open}}
-                                    {{#open}}
-                                        <ul class="comment-thread">
-                                    {{/open}}
-                                    <li id="comment-{{id}}" class="comment-thread">
-                                        <div class="comment">
-                                            <div class="threaded_comment_header">
-                                                <div class="respond_to_comment_form_div">
-                                                    <button class="respond_prompt comment_action btn btn-default btn-xs"
-                                                        data-comment="{{id}}" title="Click to respond to this comment">
-                                                        Respond
-                                                    </button>
-                                                    {{#can_edit}}
-                                                        <button class="edit_prompt comment_action btn btn-default btn-xs"
-                                                            data-comment="{{id}}"
-                                                            title="Click to edit this comment">
-                                                            Edit
-                                                        </button>
-                                                    {{/can_edit}}
-                                                </div>
-                                                <div>
-                                                    <span class="threaded_comment_author">{{author}}</span>
-                                                </div>
-                                                <div class="comment-date">
-                                                    <span>{{submit_date}}</span>
-                                                </div>
-                                            </div>
-                                            <div class="threaded_comment_title">{{title}}</div>
-                                            <div class="threaded_comment_text">{{{content}}}</div>
-                                        </div>
-                                        {{#close}}
-                                                </li>
-                                            </ul>
-                                        {{/close}}
-                                {{/context.discussion.thread}}
-                            {{/context.discussion.thread.length}}
-                            <form novalidate style="display: none" method="POST" action="/comments/post/" class="threaded_comments_form" data-maxlength="{{context.discussion.max_length}}">
-                                <h3 style="display: none">Respond</h3>
-                                <input type="hidden" id="comment-edit-id" name="edit-id" />
-                                <script type="text/javascript" src="{{#staticUrl}}{{/staticUrl}}js/app/tinymce_init.js"></script>
-                                <table class="threaded_comments_form_table">
-                                    {{{context.form}}}
-                                </table>
-                                <div class="save_and_cancel">
-                                    <button class="project btn btn-default btn-sm"
-                                        id="comment-form-submit" type="submit">
-                                        Save Comment
-                                    </button>
-                                    <button class="project cancel btn btn-default btn-sm"
-                                        style="display: none" type="button">
-                                        Cancel
-                                    </button>
+<div class="panel-subcontainer {{context.project.type}}">
+    <div class="d-flex justify-content-between align-items-center flex-wrap">
+        <div class="col-md-6 pl-0">
+            {{#title}}
+                    <div class="panel-subcontainer-title discussion">
+                        <h1 class="discussion-title">
+                            {{title}}
+                        </h1>
+                    </div>
+            {{/title}}
+         </div>
+    </div>
+    <div class="row no-gutters mt-4">
+        <div class="col-md-6">
+            <div class="threadedcomments-container">
+                {{#context.discussion.thread.length}}
+                    {{#context.discussion.thread}}
+                        {{^open}}
+                            {{^close}}
+                                </li>
+                            {{/close}}
+                        {{/open}}
+                        {{#open}}
+                            <ul class="comment-thread">
+                        {{/open}}
+                        <li id="comment-{{id}}" class="comment-thread">
+                            <div class="comment">
+                                <div class="threaded_comment_header">
+                                    <div class="respond_to_comment_form_div">
+                                        <button class="respond_prompt comment_action btn btn-default btn-xs"
+                                            data-comment="{{id}}" title="Click to respond to this comment">
+                                            Respond
+                                        </button>
+                                        {{#can_edit}}
+                                            <button class="edit_prompt comment_action btn btn-default btn-xs"
+                                                data-comment="{{id}}"
+                                                title="Click to edit this comment">
+                                                Edit
+                                            </button>
+                                        {{/can_edit}}
+                                    </div>
+                                    <div>
+                                        <span class="threaded_comment_author">{{author}}</span>
+                                    </div>
+                                    <div class="comment-date">
+                                        <span>{{submit_date}}</span>
+                                    </div>
                                 </div>
-                            </form>
-                        </div>
-                    </td>
-                    {{! Media Display Window and or a Collections box }}
-                    <td class="panel-container fluid 
-                        {{#subpanel_state}}{{subpanel_state}}{{/subpanel_state}} {{^subpanel_state}}closed{{/subpanel_state}}
-                        {{#context.editing}} fixed {{/context.editing}}{{^context.editing}} fluid {{/context.editing}} 
-                        collection">
-                        {{#context.can_edit}}
-                        <div class="collection-materials" style="display:{{#context.editing}}block{{/context.editing}}{{^context.editing}}none{{/context.editing}}">
-                            <h2>
-                                <div class="collection_button">
-                                    <a href="/course/{{getCourseId}}/asset/">View Full Collection</a>
-                                </div>
-                                Collection
-                            </h2>
-                            <div class="ajaxloader">
-                                <div class="message">
-                                <img alt="Loading..." src="{{#staticUrl}}{{/staticUrl}}img/ajax-loader.gif">
-                                <br /><br />
-                                <div>Refreshing the collection</div>
-                                </div>
+                                <div class="threaded_comment_title">{{title}}</div>
+                                <div class="threaded_comment_text">{{{content}}}</div>
                             </div>
-                            <div id="{{context.discussion.id}}-collection_table" class="collection_table"></div>
-                        </div>
-                        {{/context.can_edit}}
-                        <div class="asset-view-published"
-                            style="display: {{#context.editing}}none{{/context.editing}}{{^context.editing}}block{{/context.editing}}">
-
-                            <div id="{{context.discussion.id}}-videoclipbox" class="videoclipbox" style="display: none;">
-                                <div class="annotation-title publishedCitation" style="margin-left: 5px; margin-top: 5px;"></div>
-                                <div class="asset-title" style="margin-left: 5px; margin-bottom: 5px; margin-top: 5px; font-size: 80%;"></div>
-                                <div class="asset-object" style="border: none; background-color: #ededed;"></div><!-- width changes here too if video size changes -->
-                                    <div class="asset-display"></div>
-                                    <div class="clipstrip-display"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </td>
-                    <td class="panhandle-stripe collection">
-                        <div class="label">{{#context.editing}}Insert Selections{{/context.editing}}{{^context.editing}}View Inserted Selections{{/context.editing}}/div>
-                    </td>
-                    <td class="pantab-container">
-                        <div class="pantab collection {{#subpanel_state}}{{subpanel_state}}{{/subpanel_state}} {{^subpanel_state}}closed{{/subpanel_state}}"></div>
-                    </td>
-                </tr>
-            </table>
+                            {{#close}}
+                                    </li>
+                                </ul>
+                            {{/close}}
+                    {{/context.discussion.thread}}
+                {{/context.discussion.thread.length}}
+                <form novalidate style="display: none" method="POST" action="/comments/post/" class="threaded_comments_form" data-maxlength="{{context.discussion.max_length}}">
+                    <h3 style="display: none">Respond</h3>
+                    <input type="hidden" id="comment-edit-id" name="edit-id" />
+                    <script type="text/javascript" src="{{#staticUrl}}{{/staticUrl}}js/app/tinymce_init.js"></script>
+                    <table class="threaded_comments_form_table">
+                        {{{context.form}}}
+                    </table>
+                    <div class="save_and_cancel">
+                        <button class="project btn btn-default btn-sm"
+                            id="comment-form-submit" type="submit">
+                            Save Comment
+                        </button>
+                        <button class="project cancel btn btn-default btn-sm"
+                            style="display: none" type="button">
+                            Cancel
+                        </button>
+                    </div>
+                </form>
+            </div>
         </div>
-    </td>
-
-    <td class="pantab-container">
-        <div class="pantab discussion {{panel_state}}"></div>
-    </td>
+        <div class="col-md-6">
+            {{! Media Display Window and or a Collections box }}
+            <div class="p-2 text-center bg-light collection-materials">
+                {{#context.can_edit}}
+                <div class="collection-materials" style="display:{{#context.editing}}block{{/context.editing}}{{^context.editing}}none{{/context.editing}}">
+                    <h2>
+                        <div class="collection_button">
+                            <a href="/course/{{getCourseId}}/asset/">View Full Collection</a>
+                        </div>
+                        Collection
+                    </h2>
+                    <div class="ajaxloader">
+                        <div class="message">
+                        <img alt="Loading..." src="{{#staticUrl}}{{/staticUrl}}img/ajax-loader.gif">
+                        <br /><br />
+                        <div>Refreshing the collection</div>
+                        </div>
+                    </div>
+                    <div id="{{context.discussion.id}}-collection_table" class="collection_table"></div>
+                </div>
+                {{/context.can_edit}}
+                <div class="asset-view-published"
+                    style="display: {{#context.editing}}none{{/context.editing}}{{^context.editing}}block{{/context.editing}}">
+                    <div id="{{context.discussion.id}}-videoclipbox" class="videoclipbox" style="display: none;">
+                        <div class="annotation-title publishedCitation" style="margin-left: 5px; margin-top: 5px;"></div>
+                        <div class="asset-title" style="margin-left: 5px; margin-bottom: 5px; margin-top: 5px; font-size: 80%;"></div>
+                        <div class="asset-object" style="border: none; background-color: #ededed;"></div><!-- width changes here too if video size changes -->
+                        <div class="asset-display"></div>
+                        <div class="clipstrip-display"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
