--- a/mediathread/templates/main/three_section_tabs.html
+++ b/mediathread/templates/main/three_section_tabs.html
@@ -6,13 +6,13 @@
     </a>
     <a class="flex-sm-fill text-sm-center nav-link {% if active == 'assignments' %}active{% endif %}" role="tab"
         href="{% url 'assignment-list' request.course.pk %}"
-        title="Assignments" href="assignments/">
+        title="Assignments"">
             Assignments
             {% if role_in_course == 'student' and assignments_todo > 0 %}
                 <span class="badge badge-primary ml-2">{{assignments_todo}}</span>
             {% endif %}
     </a>
     <a class="flex-sm-fill text-sm-center nav-link {% if active == 'projects' %}active{% endif %}" role="tab"
-        href="{% url 'project-list' request.course.pk %}"
-        title="Projects" href="projects/">Projects</a>
+        href="{% url 'project-list' request.course.pk %}" id="projects-list"
+        title="Projects">Projects</a>
 </nav>
