another discussion tweak

--- a/mediathread/templates/discussions/discussion.html
+++ b/mediathread/templates/discussions/discussion.html
@@ -33,7 +33,7 @@
     <script type="text/javascript">
         jQuery(document).ready(function () {
             panelManager.init({
-                'container': 'sliding-content-container',
+                'container': 'discussion-workspace',
                 'url': MediaThread.urls['discussion-view']({{discussion.id}})
             });
         });
