Assignments: add discussion button

--- a/media/templates/discussion.mustache
+++ b/media/templates/discussion.mustache
@@ -3,7 +3,7 @@
         <div class="col-md-6 pl-0">
             {{#title}}
                     <div class="panel-subcontainer-title discussion">
-                        <h1 class="discussion-title">
+                        <h1 class="page-title">
                             {{title}}
                         </h1>
                     </div>
