--- a/mediathread/templates/projects/composition_assignment.html
+++ b/mediathread/templates/projects/composition_assignment.html
@@ -38,7 +38,7 @@
     <script type="text/javascript">
         jQuery(document).ready(function () {
             panelManager.init({
-                'container': 'sliding-content-container',
+                'container': 'project-workspace',
                 {% if public_url %}
                     'url': '{{ public_url }}'
                 {% else %}{% if show_feedback %}
