--- a/mediathread/templates/projects/composition_assignment_edit.html
+++ b/mediathread/templates/projects/composition_assignment_edit.html
@@ -42,7 +42,7 @@
     {% endwith %}
     <div class="tab-content">
         <div role="tabpanel">
-            <div class="d-flex justify-content-between align-items-center flex-wrap">
+            <div class="row">
                 <div class="col-md-12">
                     {% if form.instance %}
                         <h1 class="page-title">Edit Composition Assignment</h1>
@@ -54,127 +54,125 @@
 
             <div class="composition-assignment">
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="centered-div column-container">
-                            <form name="composition-assignment-edit"
-                                {% if form.instance %}
-                                    action="{% url 'project-save' form.instance.id %}"
-                                {% else %}
-                                    action="{% url 'project-create' %}"
-                                {% endif %}
-                                method="post">
+                    <div class="col-md-8">
+                        <form name="composition-assignment-edit"
+                            {% if form.instance %}
+                                action="{% url 'project-save' form.instance.id %}"
+                            {% else %}
+                                action="{% url 'project-create' %}"
+                            {% endif %}
+                            method="post">
 
-                                {% csrf_token %}
-                                <input type="hidden" name="project_type" value="assignment" />
+                            {% csrf_token %}
+                            <input type="hidden" name="project_type" value="assignment" />
 
-                                {% if form.instance.id %}
-                                    <a class="right small" href="{% url 'project-workspace' course.pk form.instance.id %}">
-                                        <span class="glyphicon glyphicon-file" aria-hidden="true"></span> View Assignment
-                                    </a>
-                                {% endif %}
+                            {% if form.instance.id %}
+                                <a class="right small" href="{% url 'project-workspace' course.pk form.instance.id %}">
+                                    <span class="glyphicon glyphicon-file" aria-hidden="true"></span> View Assignment
+                                </a>
+                            {% endif %}
 
-                                <div data-page="1" data-page-content="instructions" class="page">
-                                    <h3>Step 1: Introduction</h3><br />
+                            <div data-page="1" data-page-content="instructions" class="page">
+                                <h4>Step 1: Introduction</h4><br />
 
-                                    <p>A composition assignment is....</p>
+                                <p>A composition assignment is....</p>
 
-                                    <p>{% lorem %}</p>
+                                <p>{% lorem %}</p>
 
-                                    <p>Visibility of student responses can be set at one of the following levels:</p>
+                                <p>Visibility of student responses can be set at one of the following levels:</p>
+                                <ul>
+                                <li>Student responses are visible only to instructors</li>
+                                <li>Students can see other responses only after submitting their own</li>
+                                <li>Students can see other responses at any time</li>
+                                </ul>
+                                <br />
+                                <div class="row mb-5">
+                                    <div class="col">
+                                        <a href="#" class="btn btn-primary next">Get Started</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div data-page="2" data-page-content="title" class="d-none page">
+                                <h4>Step 2. Write title &amp; instructions</h4><br />
+                                <div class="form-group">
+                                    <label>Assignment Title</label><br />
+                                    <input type="text" name="title" class="form-control"
+                                        value="{% ifnotequal form.instance.title form.instance.DEFAULT_TITLE %}{{form.instance.title}}{% endifnotequal %}"/>
+                                    <div class="help-inline">Title is a required field</div>
+                                </div>
+                                <div class="form-group">
+                                    <label>Instructions for completing assignment</label>
+                                    <p>
+                                    {% lorem %}
+                                    </p>
+
+                                    <p>Instructions may include:</p>
+
                                     <ul>
-                                    <li>Student responses are visible only to instructors</li>
-                                    <li>Students can see other responses only after submitting their own</li>
-                                    <li>Students can see other responses at any time</li>
+                                    <li>One</li>
+                                    <li>Two</li>
+                                    <li>Three</li>
                                     </ul>
-                                    <br />
-                                    <div class="row mb-5">
-                                        <div class="col text-center">
-                                            <a href="#" class="btn btn-primary next">Get Started</a>
-                                        </div>
+                                    <textarea name="body" class="form-control mceEditor" id="assignment-instructions">
+                                        {{form.instance.body}}
+                                    </textarea>
+                                    <div class="help-inline">Instructions is a required field</div>
+                                </div>
+                                <div class="row mb-5">
+                                    <div class="col">
+                                        <button class="btn btn-secondary prev">Previous</button>
+                                    </div>
+                                    <div class="col text-right">
+                                        <button class="btn btn-primary next">Next</button>
                                     </div>
                                 </div>
-                                <div data-page="2" data-page-content="title" class="d-none page">
-                                    <h3>Step 2. Write title &amp; instructions</h3><br />
-                                    <div class="form-group">
-                                        <label>Assignment Title</label><br />
-                                        <input type="text" name="title" class="form-control"
-                                            value="{% ifnotequal form.instance.title form.instance.DEFAULT_TITLE %}{{form.instance.title}}{% endifnotequal %}"/>
-                                        <div class="help-inline">Title is a required field</div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label>Instructions for completing assignment</label>
-                                        <p>
-                                        {% lorem %}
-                                        </p>
+                            </div>
+                            <div data-page="3" data-page-content="due-date" class="d-none page">
+                                <h4>Step 3. Set response due date &amp; visibility</h4><br />
+                                <div class="form-group">
+                                    <label for="due_date">Due Date</label>
+                                    <input class="form-control" type="text"
+                                        name="due_date" value="{{form.instance.due_date|date:'m/d/y'}}">
+                                </div>
+                                <div class="help-inline">Please choose a due date.</div>
+                                <br />
+                                <label for="response_view_policy">Visibility</label>
+                                <p>Choose when students can see responses submitted by other students:</p>
+                                <div class="form-group">
+                                    {{form.response_view_policy}}
+                                </div>
+                                <div class="help-inline">Please choose how responses will be viewed.</div>
+                                <div><i>Note: After students respond to an assignment, they cannot edit their 
+                                response unless an instructor "unsubmits" it for further editing.</i></div><br />
 
-                                        <p>Instructions may include:</p>
-
-                                        <ul>
-                                        <li>One</li>
-                                        <li>Two</li>
-                                        <li>Three</li>
-                                        </ul>
-                                        <textarea name="body" class="form-control mceEditor" id="assignment-instructions">
-                                            {{form.instance.body}}
-                                        </textarea>
-                                        <div class="help-inline">Instructions is a required field</div>
+                                <div class="row mb-5">
+                                    <div class="col">
+                                        <button class="btn btn-secondary prev">Previous</button>
                                     </div>
-                                    <div class="row mb-5">
-                                        <div class="col">
-                                            <button class="btn btn-secondary prev">Previous</button>
-                                        </div>
-                                        <div class="col text-right">
-                                            <button class="btn btn-primary next">Next</button>
-                                        </div>
+                                    <div class="col text-right">
+                                        <button class="btn btn-primary next">Next</button>
                                     </div>
                                 </div>
-                                <div data-page="3" data-page-content="due-date" class="d-none page">
-                                    <h3>Step 3. Set response due date &amp; visibility</h3><br />
-                                    <div class="form-group">
-                                        <label for="due_date">Due Date</label>
-                                        <input class="form-control" type="text"
-                                            name="due_date" value="{{form.instance.due_date|date:'m/d/y'}}">
-                                    </div>
-                                    <div class="help-inline">Please choose a due date.</div>
-                                    <br />
-                                    <label for="response_view_policy">Visibility</label>
-                                    <p>Choose when students can see responses submitted by other students:</p>
-                                    <div class="form-group">
-                                        {{form.response_view_policy}}
-                                    </div>
-                                    <div class="help-inline">Please choose how responses will be viewed.</div>
-                                    <div><i>Note: After students respond to an assignment, they cannot edit their 
-                                    response unless an instructor "unsubmits" it for further editing.</i></div><br />
-
-                                    <div class="row mb-5">
-                                        <div class="col">
-                                            <button class="btn btn-secondary prev">Previous</button>
-                                        </div>
-                                        <div class="col text-right">
-                                            <button class="btn btn-primary next">Next</button>
-                                        </div>
+                            </div>
+                            <div data-page="4" data-page-content="publish" class="d-none page">
+                                <h4>Step 4. Publish assignment to students</h4><br />
+                                <div class="form-group">
+                                    <div class="radio">
+                                        {{form.publish}}
                                     </div>
                                 </div>
-                                <div data-page="4" data-page-content="publish" class="d-none page">
-                                    <h3>Step 4. Publish assignment to students</h3><br />
-                                    <div class="form-group">
-                                        <div class="radio">
-                                            {{form.publish}}
-                                        </div>
-                                    </div>
-                                    <div class="help-inline">Please select who can see your work.</div>
+                                <div class="help-inline">Please select who can see your work.</div>
 
-                                    <div class="row mb-5">
-                                        <div class="col">
-                                            <button class="btn btn-secondary prev">Previous</button>
-                                        </div>
-                                        <div class="col text-right">
-                                            <button class="btn btn-primary save">Save</button>
-                                        </div>
+                                <div class="row mb-5">
+                                    <div class="col">
+                                        <button class="btn btn-secondary prev">Previous</button>
+                                    </div>
+                                    <div class="col text-right">
+                                        <button class="btn btn-primary save">Save</button>
                                     </div>
                                 </div>
-                            </form>
-                        </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
