--- a/mediathread/templates/projects/composition_assignment_edit.html
+++ b/mediathread/templates/projects/composition_assignment_edit.html
@@ -92,7 +92,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div data-page="2" data-page-content="title" class="d-none page">
+                            <div data-page="2" data-page-content="title" class="hidden page">
                                 <h4>Step 2. Write title &amp; instructions</h4><br />
                                 <div class="form-group">
                                     <label>Assignment Title</label><br />
@@ -127,7 +127,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div data-page="3" data-page-content="due-date" class="d-none page">
+                            <div data-page="3" data-page-content="due-date" class="hidden page">
                                 <h4>Step 3. Set response due date &amp; visibility</h4><br />
                                 <div class="form-group">
                                     <label for="due_date">Due Date</label>
@@ -154,7 +154,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div data-page="4" data-page-content="publish" class="d-none page">
+                            <div data-page="4" data-page-content="publish" class="hidden page">
                                 <h4>Step 4. Publish assignment to students</h4><br />
                                 <div class="form-group">
                                     <div class="radio">
