--- a/media/css/mediathread_new.css
+++ b/media/css/mediathread_new.css
@@ -52,6 +52,10 @@ h1.page-title {
     padding: .25em 0em .25em 0em;
 }
 
+.hidden {
+    display: none;
+}
+
 #project-container input[name="title"] {
     font-size: 2.5rem;
     font-family: 'Montserrat', sans-serif;
@@ -69,8 +73,6 @@ h1.page-title {
     background-color: #fff;
     background-clip: padding-box;
     border: 0;
-    
-    
 }
 
 #project-container .participant-container
