--- a/mediathread/templates/projects/composition_assignment_edit.html
+++ b/mediathread/templates/projects/composition_assignment_edit.html
@@ -95,13 +95,13 @@
                             <div data-page="2" data-page-content="title" class="hidden page">
                                 <h4>Step 2. Write title &amp; instructions</h4><br />
                                 <div class="form-group">
-                                    <label>Assignment Title</label><br />
+                                    <label><strong>Assignment Title</strong></label><br />
                                     <input type="text" name="title" class="form-control"
                                         value="{% ifnotequal form.instance.title form.instance.DEFAULT_TITLE %}{{form.instance.title}}{% endifnotequal %}"/>
                                     <div class="help-inline">Title is a required field</div>
                                 </div>
                                 <div class="form-group">
-                                    <label>Instructions for completing assignment</label>
+                                    <label><strong>Instructions for completing assignment</strong></label>
                                     <p>
                                     {% lorem %}
                                     </p>
@@ -130,13 +130,13 @@
                             <div data-page="3" data-page-content="due-date" class="hidden page">
                                 <h4>Step 3. Set response due date &amp; visibility</h4><br />
                                 <div class="form-group">
-                                    <label for="due_date">Due Date</label>
+                                    <label for="due_date"><strong>Due Date</strong></label>
                                     <input class="form-control" type="text"
                                         name="due_date" value="{{form.instance.due_date|date:'m/d/y'}}">
                                 </div>
                                 <div class="help-inline">Please choose a due date.</div>
                                 <br />
-                                <label for="response_view_policy">Visibility</label>
+                                <label for="response_view_policy"><strong>Visibility</strong></label>
                                 <p>Choose when students can see responses submitted by other students:</p>
                                 <div class="form-group">
                                     {{form.response_view_policy}}
@@ -156,6 +156,8 @@
                             </div>
                             <div data-page="4" data-page-content="publish" class="hidden page">
                                 <h4>Step 4. Publish assignment to students</h4><br />
+
+                                <label><strong>Publish Options</strong></label>
                                 <div class="form-group">
                                     <div class="radio">
                                         {{form.publish}}
