Drawing improvements - MEDT-3596
* Disable panning and zooming when drawing
* Fix a problem onClearActiveSelection, where it wasn't clearing
  everything
* Enable Clear button
* Only allow one shape per selection
* Update onCreateSelection to only save one feature. This fixes a bug
  where selections created in the new tool weren't displaying correctly,
  because the coordinates were nested incorrectly.
* Removed focus style from Shape button. This fixes the issue where you
  have to click twice on the image map after clicking the Shape button.

--- a/media/css/mediathread_new.css
+++ b/media/css/mediathread_new.css
@@ -4436,14 +4436,12 @@ ul.section-tabs>li>a.active {
     background-color: black;
 }
 
-.toolbar-annotations .input-group:focus-within,
-.toolbar-annotations button.polygon-button:focus-within {
+.toolbar-annotations .input-group:focus-within {
     background-color: #ffc107;
     border: 6px solid #ffc107;
 }
 
-.toolbar-annotations .input-group:focus-within button,
-.toolbar-annotations button.polygon-button:focus-within {
+.toolbar-annotations .input-group:focus-within button {
     color: #212529;
     border-color: #212529;
 }
